--- a/src/styles.css
+++ b/src/styles.css
@@ -31,21 +31,84 @@ button:hover {
   background-color: #ffffff;
 }
 
-/* Task №1 */
-.container {
-    margin-top: 15px;
-    font-size: 20px;
+.counter-block,
+.color-block,
+.text-block,
+.number-block,
+.style-block,
+.slider,
+.size-block {
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
+/* Task №1 */
+.counter-block {
+  font-size: 20px;
+}
 
 /* Task №2 */
-.block {
-    width: 250px;
-    height: 200px;
-    background-color: #ffffff;
+.color-block {
+  width: 250px;
+  height: 200px;
+  background-color: #ffffff;
+  padding: 10px 15px;
+  text-align: center;
 }
 
 /* Task №3 */
-.area {
-    font-size: 20px;
+.text-block {
+  font-size: 20px;
+}
+
+/* Task №4 */
+.number-block {
+  font-size: 20px;
+}
+
+/* Task №5 */
+.style-block {
+  width: 200px;
+  height: 150px;
+  background-color: #ffffff;
+  font-size: 10px;
+  font-family: "IBM Plex Serif", serif;
+  color: black;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+/* Task №6 */
+.slider {
+  width: 350px;
+  height: 250px;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+/* Task №7 */
+.size-block {
+  width: 250px;
+  height: 200px;
+  background-color: rgb(222, 238, 252);
+  padding: 10px 15px;
+  color: black;
+  text-align: center;
 }
